修改页面文字

--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -43,7 +43,7 @@
                 <li class="itemColor-1">
                     <a href="{:url('Wallet/Wallet')}">
                         <img src="__PUBLIC__/images/home/Assets-icon@2x.png" alt="">
-                        <span>投资</span>
+                        <span>委 托</span>
                     </a>
                 </li>
                 <li class="itemColor-2">
