--- a/application/index/view/login_directdrive.html
+++ b/application/index/view/login_directdrive.html
@@ -29,7 +29,7 @@
         <!-- 标题 -->
         <div class="thead-zp">
             <ul>
-                <li>用户名</li>
+                <li>直推用户名</li>
                 <li>电话号码</li>
                 <li>状态</li>
                 <li>时间</li>
