--- a/application/admin/view/withdrawal_detail.html
+++ b/application/admin/view/withdrawal_detail.html
@@ -67,7 +67,7 @@
 					      	<div class="grid-demo grid-demo-bg1">代币状态</div>
 					    </div>
 					    <div class="layui-col-xs10">
-					      	<div class="grid-demo">{if condition="$currency.status == 0"}正常{else/}禁用{/if}</div>
+					      	<div class="grid-demo">{if condition="$currency.status == 1"}正常{else/}禁用{/if}</div>
 					    </div>
 					</div>
 					<hr>
@@ -135,7 +135,7 @@
 					    </div>
 					</div>
 					<hr>
-					<div class="layui-row">
+					<!-- <div class="layui-row">
 					    <div class="layui-col-xs2">
 					      	<div class="grid-demo grid-demo-bg1">备注</div>
 					    </div>
@@ -145,7 +145,7 @@
 					      	</div>
 					    </div>
 					    <button class="layui-btn layui-btn-sm" id="sub">提交备注</button>
-					</div>
+					</div> -->
 					<hr>
 				</div>
                
