--- a/application/admin/view/withdrawal_lists.html
+++ b/application/admin/view/withdrawal_lists.html
@@ -36,11 +36,20 @@
 					{/switch}
                 </td>
                 <td>{$vo.wallet_addr}</td>
-                <td>{$vo.qrcode_addr}</td>                
+                <!-- <td>{$vo.qrcode_addr}</td>   --> 
+                <td><button data-method="offset" data-type="auto" data-id="{$vo.qrcode_addr}" class="qrcode_addr layui-btn layui-btn-normal layui-btn-sm">查看二维码</button></td>
+                             
                 <td>{$vo.create_time|date="Y-m-d H:i:s", ###}</td>                
-                <td>{$vo.check_time|date="Y-m-d H:i:s", ###}</td>                
                 <td>
-                	<a href="{:url('admin/Withdrawal/detail',['id'=>$vo['id']])}" class="layui-btn layui-btn-normal layui-btn-sm">查看</a>
+                    {if condition="$vo.check_time == '' "}
+                       --
+                    {/if}
+                    {if condition="$vo.check_time neq '' "}
+                        {$vo.check_time|date="Y-m-d H:i:s", ###}
+                    {/if}
+                </td>                
+                <td>
+                	<a href="{:url('admin/Withdrawal/detail',['id'=>$vo['id']])}" class="layui-btn layui-btn-normal layui-btn-sm">查看详情</a>
                     {if condition='$vo.status == 0'}
                     	<a href="javascript:;" data-id="{$vo.id}" data-url="{:url('admin/Withdrawal/withdrawal_audit',['id'=>$vo['id']])}" data-opt="check" class="elementcheck layui-btn layui-btn-sm ajax-delete">审核</a>
                     {/if}
@@ -64,4 +73,33 @@
 {block name="js"}
 <script type="text/javascript" src="__ADMIN__/js/delelement.js"></script>
 <script type="text/javascript" src="__ADMIN__/js/audit.js"></script>
+<script>
+     layui.use(['layer','jquery','form'],function(){
+        var layer = layui.layer
+            , form = layui.form
+            ,jq = layui.jquery;
+
+        //点击事件
+        jq('.qrcode_addr').click(function(index){
+            var url= jq(this).data('id');
+            layer.open({
+                title: '钱包二维码',
+                type:1,
+                content:'<img src='+url+'>',
+                time:9000,
+                closeBtn:1,
+                shade: 0.5,
+                area: ['30%','50%'],
+
+                yes: function(){
+                    layer.closeAll();
+                },
+                cancel:function(){
+                    layer.close();
+                }
+
+            })
+        });
+    });
+</script>
 {/block}
