--- a/application/admin/view/withdrawal_detail.html
+++ b/application/admin/view/withdrawal_detail.html
@@ -35,14 +35,14 @@
 					    </div>
 					</div>
 					<hr>
-					<div class="layui-row">
+					<!-- <div class="layui-row">
 					    <div class="layui-col-xs2">
 					      	<div class="grid-demo grid-demo-bg1">用户钱包余额</div>
 					    </div>
 					    <div class="layui-col-xs10">
 					      	<div class="grid-demo">{$detail.uid|balance}</div>
 					    </div>
-					</div>
+					</div> -->
 					<hr>
 					<div class="layui-row">
 					    <div class="layui-col-xs2">
