修改后台参数

--- a/application/admin/view/login_index.html
+++ b/application/admin/view/login_index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>LaySNS后台管理</title>
+<title>HTD  后台管理</title>
 <link rel="stylesheet" href="__ADMIN__/css/admin.css">
 <link rel="stylesheet" href="__ADMIN__/plugins/layui/css/layui.css">
 <script src="__ADMIN__/js/jquery-1.9.1.min.js" type="text/javascript"></script>
