--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -34,7 +34,7 @@
 
         <!-- 公告 -->
         <div class="notice-zp">
-            <a href="{:url('index/my_message')}">{$res['title']}</a>
+            <a href="{:url('index/my_message')}"><span style="display: block;overflow:hidden;width: 80px;white-space:nowrap;text-overflow:ellipsis;">{$res['title']}</span></a>
         </div>
 
         <!-- 菜单导航 -->
@@ -103,7 +103,7 @@
                     <span class="close"><img src="__PUBLIC__/images/home/notice-close.png" /></span>
                 </div>
                 <div class="dialog-content">
-                    <p>{$res['title']}</p>
+                    <p style="overflow:hidden;width: 80px;white-space:nowrap;text-overflow:ellipsis;">{$res['title']}</p>
 
                 </div>
                 <div class="dialog-btn">
