修改启动页1

--- a/application/index/view/index_startindex.html
+++ b/application/index/view/index_startindex.html
@@ -20,8 +20,7 @@
     <script>
 
         // 3秒后获取当前域名跳转
-        // $url = "http://".$_SERVER ['HTTP_HOST']."/index/login/index";
-        // header("refresh:1;url=$url");
+        // $url = "http://".."/index/login/index";
     </script>
 </body>
 </html>
