启动页修改

--- a/application/index/view/index_startindex.html
+++ b/application/index/view/index_startindex.html
@@ -14,21 +14,21 @@
 <body>
     <div class="wrapper">
         <!--启动页 -->
-        <div class="guide-wrap">
+        <!-- <div class="guide-wrap">
             <img src="__PUBLIC__/images/home/startIndex.gif" class="imgs"/>
-        </div>
+        </div> -->
     </div>
     <script src="/public/js/jquery-1.8.3.min.js"></script>
     <script>
-        $(function(){
+        // $(function(){
 
-            // 3秒后获取当前域名跳转
-            var domain = document.domain;
-            $url = "http://"+ domain +"/index/login/index?flag=1";
-            setInterval(function(){
-                location.href = $url;
-            },3000)
-		})
+        //     // 3秒后获取当前域名跳转
+        //     var domain = document.domain;
+        //     $url = "http://"+ domain +"/index/login/index?flag=1";
+        //     setInterval(function(){
+        //         location.href = $url;
+        //     },3000)
+		// })
 
     </script>
 </body>
