--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -1,124 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>HTD</title>
-		<script src="__PUBLIC__/js/rem.js"></script>
-		<link rel="stylesheet" href="__PUBLIC__/css/reset.css?v=10">
-		<link rel="stylesheet" href="__PUBLIC__/css/base.css" />
-		<link rel="stylesheet" href="__PUBLIC__/css/login/login.css?v=11111">
-		<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
-	</head>
 
-	<body>
-			<div class="loginbox">
-        
-					<div class="header-zp">
-						
-						<h3>登录</h3>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>HTD</title>
+	<script src="__PUBLIC__/js/rem.js"></script>
+	<link rel="stylesheet" href="__PUBLIC__/css/reset.css?v=10">
+	<link rel="stylesheet" href="__PUBLIC__/css/base.css" />
+	<link rel="stylesheet" href="__PUBLIC__/css/login/login.css?v=11111">
+	<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
+	<style>
+		.start-wrap{
+			position: fixed;
+			top: 0;
+			left: 0;
+			z-index: 100;
+		}
+		.start-wrap img{
+            width: 100%;
+            height: 100%;
+		}
+	</style>
+</head>
+
+<body>
+	<div class="loginbox">
+
+		<div class="header-zp">
+
+			<h3>登录</h3>
+		</div>
+		<div class="login-new-page">
+			<!-- {:url('index/login/login')} -->
+			<form action="" method="post" class="sms-login-from" id="form">
+				<div class="info mistake"></div>
+				<div class="from-group">
+					<span class="from-tit">用户名:</span>
+					<div class="from-icon">
+						<img src="__PUBLIC__images/login/shouji.png" alt="">
+						<input type="text" name="username" placeholder="请输入用户名" class="pptt username" value>
 					</div>
-				 <div class="login-new-page">
-						<!-- {:url('index/login/login')} -->
-					  <form action="" method="post" class="sms-login-from" id="form">
-						  <div class="info mistake"></div>
-						  <div class="from-group">
-							  <span class="from-tit">用户名:</span>
-							  <div class="from-icon">
-									<img src="__PUBLIC__images/login/shouji.png" alt="">
-							  <input type="text" name="username" placeholder="请输入用户名"class="pptt username" value >
-								</div>
-						  </div>
-						  <div class="info mistake"></div>
-						  <div class="from-group">
-								<span class="from-tit">密码:</span>
-								<div class="from-icon">
-										<img src="__PUBLIC__images/login/suo.png" alt="">
-								<input type="password" name="pwd" placeholder="请输入密码" class="pptt pwd" value >
-							</div>
-						  </div>
-						  <div class="info mistake"></div>
-						  <div class="from-group">
-							  <span class="from-tit">验证码:</span>
-							  <div class="from-icon from-verify">
-									<img src="__PUBLIC__images/login/yanz.png" alt="">
-									<!-- style="width:100px;float:left;margin-right: 10px;border: 1px solid #ffffff;border-radius: .1rem;" -->
-							  <input  type="text" name="verify" placeholder="验证码" required lay-verify="required" autocomplete="off" class="layui-input verify" maxlength="4">
-						  </div>
-						  <!-- width="150" style="float:left; cursor:pointer;" -->
-						  <img id="captcha" src="{:url('login/captcha')}" onclick="this.src='{:url('login/captcha')}?'+Math.random();"  alt="captcha" />
-						  </div>
-					  </form>
-						<button class="btn active" id="btn">登录</button>
-				  <div class="login-new">
-					  <a href="{:url('index/login/register')}" class="register">注册</a>
-					  <a href="{:url('index/login/retrieve')}" class="retrieve">忘记密码?</a>
-				  </div>    
-				 </div>
 				</div>
-	</body>
-	<script src="__PUBLIC__/js/jquery-1.8.3.min.js"></script>
-	<!-- <script src="__PUBLIC__/plugins/layui/layui.js" type="text/javascript"></script> -->
-	<script src="__PUBLIC__/js/login/login.js"></script>
-	<script src="__PUBLIC__/js/public/publicAlert.js"></script>
+				<div class="info mistake"></div>
+				<div class="from-group">
+					<span class="from-tit">密码:</span>
+					<div class="from-icon">
+						<img src="__PUBLIC__images/login/suo.png" alt="">
+						<input type="password" name="pwd" placeholder="请输入密码" class="pptt pwd" value>
+					</div>
+				</div>
+				<div class="info mistake"></div>
+				<div class="from-group">
+					<span class="from-tit">验证码:</span>
+					<div class="from-icon from-verify">
+						<img src="__PUBLIC__images/login/yanz.png" alt="">
+						<!-- style="width:100px;float:left;margin-right: 10px;border: 1px solid #ffffff;border-radius: .1rem;" -->
+						<input type="text" name="verify" placeholder="验证码" required lay-verify="required"
+							autocomplete="off" class="layui-input verify" maxlength="4">
+					</div>
+					<!-- width="150" style="float:left; cursor:pointer;" -->
+					<img id="captcha" src="{:url('login/captcha')}"
+						onclick="this.src='{:url('login/captcha')}?'+Math.random();" alt="captcha" />
+				</div>
+			</form>
+			<button class="btn active" id="btn">登录</button>
+			<div class="login-new">
+				<a href="{:url('index/login/register')}" class="register">注册</a>
+				<a href="{:url('index/login/retrieve')}" class="retrieve">忘记密码?</a>
+			</div>
+		</div>
+
+		<!--启动页 -->
+		<div class="start-wrap">
+			<img src="__PUBLIC__/images/home/startIndex.gif" class="imgs"/>
+		</div>
+
+	</div>
+</body>
+<script src="__PUBLIC__/js/jquery-1.8.3.min.js"></script>
+<!-- <script src="__PUBLIC__/plugins/layui/layui.js" type="text/javascript"></script> -->
+<script src="__PUBLIC__/js/login/login.js"></script>
+<script src="__PUBLIC__/js/public/publicAlert.js"></script>
+
 </html>
 
 <script>
-$(function(){
+	$(function () {
 
 
-	$("#btn").click(function(){
+		$("#btn").click(function () {
 
-		var username = $.trim($(".username").val());
+			var username = $.trim($(".username").val());
 
-		var password = $.trim($(".pwd").val());
-		var verify = $.trim($(".verify").val());
-		console.log(password,6666);
-		if(username == ""){
-			suredAlert($('body'),'用户名不能为空!!!');
-			return
-		}
-		// else if(!condition.phonestate){  //验证手机通过正则
-		// 	suredAlert($('body'),'请输入正确的用户名!!!');
-		// 	return
-		// }
-		
-  if(password == ""){
-		// alert('密码不能为空');
-		suredAlert($('body'),'密码不能为空!!!');
-		return
-	}else if(!condition.pwdstate){ //验证密码格式通过
-		suredAlert($('body'),'用户名密码格式错误 6~16位!!!');
-		return
-	}
-	//ajax去服务器端校验
-
-		var data= {username:username,password:password,verify:verify};
-		console.log(data);
-
-		$.ajax({
-
-			type:"POST",
-
-			url:"{:url('index/login/login')}",
-
-			data:data,
-
-			dataType:'json',
-
-			success:function(msg){
-				if (msg.flag == '0'){
-					suredAlert($('body'),msg.msg,msg.url);
-				} else {
-					$('#captcha').attr('src',"{:url('login/captcha')}?"+Math.random());
-					suredAlert($('body'),msg.msg);
-                   
-				}
+			var password = $.trim($(".pwd").val());
+			var verify = $.trim($(".verify").val());
+			console.log(password, 6666);
+			if (username == "") {
+				suredAlert($('body'), '用户名不能为空!!!');
+				return
 			}
+			// else if(!condition.phonestate){  //验证手机通过正则
+			// 	suredAlert($('body'),'请输入正确的用户名!!!');
+			// 	return
+			// }
+
+			if (password == "") {
+				// alert('密码不能为空');
+				suredAlert($('body'), '密码不能为空!!!');
+				return
+			} else if (!condition.pwdstate) { //验证密码格式通过
+				suredAlert($('body'), '用户名密码格式错误 6~16位!!!');
+				return
+			}
+			//ajax去服务器端校验
+
+			var data = { username: username, password: password, verify: verify };
+			console.log(data);
+
+			$.ajax({
+
+				type: "POST",
+
+				url: "{:url('index/login/login')}",
+
+				data: data,
+
+				dataType: 'json',
+
+				success: function (msg) {
+					if (msg.flag == '0') {
+						suredAlert($('body'), msg.msg, msg.url);
+					} else {
+						$('#captcha').attr('src', "{:url('login/captcha')}?" + Math.random());
+						suredAlert($('body'), msg.msg);
+
+					}
+				}
+
+			});
 
 		});
 
-	});
-})
+
+		// 3秒后启动页隐藏
+		setInterval(function(){
+			$(".start-wrap").css("display","none");
+		},3000)
+
+	})
 </script>
