--- a/application/index/view/index_news_details.html
+++ b/application/index/view/index_news_details.html
@@ -19,7 +19,7 @@
 		<div class="details_all">
 			<div class="lj_wrap">
 				<div class="details_item1 clearfix">
-					<p>{$res['title']}</p>
+					<p style="line-height:0.5rem;font-size:0.36rem;margin:0.1rem 0;">{$res['title']}</p>
 				</div>
 				<div class="details_item2">
 					<div class="d_item2_con">
