--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -76,7 +76,7 @@
 
 	<!--启动页 -->
 	<div class="start-wrap">
-		<img src="__PUBLIC__/images/home/startIndex.gif" alt="加载中.." onerror=src="__PUBLIC__/images/public/loding.gif" class="imgs"/>
+		<img src="__PUBLIC__/images/home/startIndex.gif" class="imgs"/>
 	</div>
 </body>
 <script src="__PUBLIC__/js/jquery-1.8.3.min.js"></script>
