--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -75,12 +75,10 @@
 	</div>
 
 	<!-- 启动页路径 -->
-	<img src="__PUBLIC__/images/home/startIndex.gif" id="imgs" style="display:none;" />
-	<!--启动页 -->
+	<!-- <img src="__PUBLIC__/images/home/startIndex.gif" id="imgs" style="display:none;" />
 	<div class="start-wrap">
-		<!-- <img src="__PUBLIC__/images/home/startIndex.gif" class="imgs" /> -->
 		<img class="imgs">
-	</div>
+	</div> -->
 </body>
 <script src="__PUBLIC__/js/jquery-1.8.3.min.js"></script>
 <!-- <script src="__PUBLIC__/plugins/layui/layui.js" type="text/javascript"></script> -->
@@ -147,18 +145,18 @@
 		});
 	})
 
-	window.onload = function(){
-		var imgSrc = $("#imgs").attr('src');
-		localStorage.setItem("imgSrc",imgSrc);
-		setInterval(function(){
-			var localSrc = localStorage.getItem("imgSrc");
-			$(".imgs").attr("src",localSrc);
-			// 3秒后启动页隐藏
-			setInterval(function(){
-				$(".start-wrap").css("display","none");
-				$(".loginbox").show();
-			},2300)
-		},2200)
-	}
+	// window.onload = function(){
+	// 	var imgSrc = $("#imgs").attr('src');
+	// 	localStorage.setItem("imgSrc",imgSrc);
+	// 	setInterval(function(){
+	// 		var localSrc = localStorage.getItem("imgSrc");
+	// 		$(".imgs").attr("src",localSrc);
+	// 		// 3秒后启动页隐藏
+	// 		setInterval(function(){
+	// 			$(".start-wrap").css("display","none");
+	// 			$(".loginbox").show();
+	// 		},2300)
+	// 	},2200)
+	// }
 
 </script>
