--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="__PUBLIC__/css/base.css" />
 	<link rel="stylesheet" href="__PUBLIC__/css/login/login.css?v=11111">
 	<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
-	<style>
+	<!-- <style>
 		.loginbox{
 			display: none;
 		}
@@ -25,7 +25,7 @@
             width: 100%;
             height: 100%;
 		}
-	</style>
+	</style> -->
 </head>
 
 <body>
