修改密码页

--- a/application/index/view/login_retrieve.html
+++ b/application/index/view/login_retrieve.html
@@ -14,7 +14,7 @@
 <body>
     <div class="retrievebox">
         <div class="header-zp">
-            <span class="return">
+            <span class="return" onclick="javascript:history.back(-1)">
                 <img src="__PUBLIC__/images/public/return-zp@2x.png" /></span>
             <h3>手机短信找回密码</h3>
         </div>
