原页面跳转

--- a/application/index/view/my_browser.html
+++ b/application/index/view/my_browser.html
@@ -22,56 +22,56 @@
         <div class="browser-list-zp">
             <ul>
                 <li class="browserItem">
-                    <a href="https://btc.com/">
-                        <img src="__PUBLIC__/images/browse/BTC-icon.png" alt="">
+                    <a href="https://btc.com/" target="_parent">
+                        <img src="__PUBLIC__/images/browse/BTC-icon.png">
                         <span>BTC</span>
                     </a>
                 </li>
                 <li class="browserItem">
-                    <a href="https://etherscan.io/">
-                        <img src="__PUBLIC__/images/browse/ETH-icon.png" alt="">
+                    <a href="https://etherscan.io/" target="_parent">
+                        <img src="__PUBLIC__/images/browse/ETH-icon.png">
                         <span>ETH</span>
                     </a>
                 </li>
                 <li class="browserItem">
-                    <a href="http://explorer.litecoin.net/">
-                        <img src="__PUBLIC__/images/browse/LTC-icon.png" alt="">
+                    <a href="http://explorer.litecoin.net/" target="_parent">
+                        <img src="__PUBLIC__/images/browse/LTC-icon.png" >
                         <span>LTC</span>
                     </a>
                 </li>
                 <li class="browserItem">
-                    <a href="https://bch.btc.com/">
-                        <img src="__PUBLIC__/images/browse/BCH-icon.png" alt="">
+                    <a href="https://bch.btc.com/" target="_parent">
+                        <img src="__PUBLIC__/images/browse/BCH-icon.png" >
                         <span>BCH</span>
                     </a>
                 </li>
                 <li class="browserItem">
-                    <a href="https://eosflare.io/">
-                        <img src="__PUBLIC__/images/browse/EOS-icon.png" alt="">
+                    <a href="https://eosflare.io/" target="_parent">
+                        <img src="__PUBLIC__/images/browse/EOS-icon.png" >
                         <span>EOS</span>
                     </a>
                 </li>
                 <li class="browserItem">
-                    <a href="https://www.omniexplorer.info/">
-                        <img src="__PUBLIC__/images/browse/USDT-icon.png" alt="">
+                    <a href="https://www.omniexplorer.info/" target="_parent">
+                        <img src="__PUBLIC__/images/browse/USDT-icon.png">
                         <span>USDT</span>
                     </a>
                 </li>
                 <li class="browserItem">
-                    <a href="https://www.trxplorer.io/">
-                        <img src="__PUBLIC__/images/browse/TRX-icon.png" alt="">
+                    <a href="https://www.trxplorer.io/" target="_parent">
+                        <img src="__PUBLIC__/images/browse/TRX-icon.png" >
                         <span>TRX</span>
                     </a>
                 </li>
                 <li class="browserItem">
-                    <a href="https://bithomp.com/explorer/">
-                        <img src="__PUBLIC__/images/browse/XRP-icon.png" alt="">
+                    <a href="https://bithomp.com/explorer/" target="_parent">
+                        <img src="__PUBLIC__/images/browse/XRP-icon.png">
                         <span>XRP</span>
                     </a>
                 </li>
                 <li class="browserItem">
-                    <a href="http://gastracker.io/">
-                        <img src="__PUBLIC__/images/browse/ETC-icon.png" alt="">
+                    <a href="http://gastracker.io/" target="_parent">
+                        <img src="__PUBLIC__/images/browse/ETC-icon.png">
                         <span>ETC</span>
                     </a>
                 </li>
