隐藏头部返回按钮

--- a/public/css/public/base.css
+++ b/public/css/public/base.css
@@ -22,6 +22,7 @@
 	display: flex;
   	align-items: center;
     justify-content: center;
+    display: none;
 }
 .header-zp .return img{
     width: 0.16rem;
