修改后台统计

--- a/application/admin/view/index_home.html
+++ b/application/admin/view/index_home.html
@@ -8,38 +8,38 @@
                     <div class="item item_price">
                         <i class="icon"><img src="__ADMIN__/images/1.png" width="71" height="74"></i>
                         <div class="desc">
-                            <div class="tit"><!----><em>¥</em>{$count.dynamic_wallet}<!----></div>
-                            <span>动态奖金统计</span>
+                            <div class="tit">{$count.static_wallet}</div>
+                            <span>静动态收益统计</span>
                         </div>
                     </div>
-                    <div class="item item_order">
+                    <!-- <div class="item item_order">
                         <i class="icon"><img src="__ADMIN__/images/2.png"></i>
                         <div class="desc">
                             <div class="tit">{$count.total_user}</div>
                             <span>财务统计</span>
                         </div>
                         <i class="icon"></i>
-                    </div>
+                    </div> -->
                     <div class="item item_comment">
                         <i class="icon"><img src="__ADMIN__/images/3.png" width="90" height="86"></i>
                         <div class="desc">
-                            <div class="tit">{$count.static_wallet}</div>
-                            <span>静态奖金统计</span>
+                            <div class="tit"><!----><em>¥</em>{$count.dynamic_wallet}<!----></div>
+                            <span>全球分红统计</span>
                         </div>
                     </div>
 
                     <div class="item item_comment">
                         <i class="icon"><img src="__ADMIN__/images/3.png" width="90" height="86"></i>
                         <div class="desc">
-                            <div class="tit">{$count.total_user}</div>
-                            <span>总会员本金主流币数量统计</span>
+                            <div class="tit">{$count.total_num}</div>
+                            <span>总会员本金数量统计</span>
                         </div>
                     </div>
                     <div class="item item_flow">
                         <i class="icon"><img src="__ADMIN__/images/4.png" width="86"></i>
                         <div class="desc">
                             <div class="tit">{$count.total_user}</div>
-                            <span>总会员数统计</span>
+                            <span>总注册会员数统计</span>
                         </div>
                         <i class="icon"></i>
                     </div>
