--- a/application/admin/view/index_home.html
+++ b/application/admin/view/index_home.html
@@ -23,7 +23,7 @@
                     <div class="item item_comment">
                         <i class="icon"><img src="__ADMIN__/images/3.png" width="90" height="86"></i>
                         <div class="desc">
-                            <div class="tit"><!----><em>¥</em>{$count.dynamic_wallet}<!----></div>
+                            <div class="tit">{$count.dynamic_wallet}<!----></div>
                             <span>全球分红统计</span>
                         </div>
                     </div>
