--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -9,7 +9,7 @@
 	<script src="__PUBLIC__/js/rem.js"></script>
 	<link rel="stylesheet" href="__PUBLIC__/css/reset.css?v=10">
 	<link rel="stylesheet" href="__PUBLIC__/css/base.css" />
-	<link rel="stylesheet" href="__PUBLIC__/css/login/login.css?v=11111">
+	<link rel="stylesheet" href="__PUBLIC__/css/login/login.css?v=1709">
 	<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
 	<!-- <style>
 		.loginbox{
@@ -70,6 +70,15 @@
 			<div class="login-new">
 				<a href="{:url('index/login/register')}" class="register">注册</a>
 				<a href="{:url('index/login/retrieve')}" class="retrieve">忘记密码?</a>
+			</div>
+			<!-- 二维码 -->
+			<div class="scan-code">
+				 <span class="code">
+					 <img src="__PUBLIC__images/login/code.png" alt="">
+				 </span>
+				 <span class="code-msg">
+					App二维码
+				 </span>
 			</div>
 		</div>
 	</div>
