--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -3,7 +3,7 @@
 */
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     font-size: 0.24rem;
     font-family: "PingFangMedium";
     background: -moz-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
@@ -177,4 +177,24 @@ color: #b8c9cf
     width: 35%;
     padding-left: .18rem;
     cursor:pointer;
+}
+
+/* 二维码 */
+.scan-code{
+    padding:1rem 1rem .2rem 1rem;
+    width: 5rem;
+    margin: 0 auto;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing:border-box;
+}
+.scan-code>span{
+    display: block;
+    text-align: center;
+    font-size: .3rem;
+    color: #ffffff;
+}
+.scan-code .code img{
+    width: 100%;
+    height: 100%;
 }
