修改登录页

--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -77,7 +77,7 @@
 					 <img src="__PUBLIC__images/login/code.png" alt="">
 				 </span>
 				 <span class="code-msg">
-					App二维码
+					扫描下载APP
 				 </span>
 			</div>
 		</div>
