--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -20,13 +20,13 @@
         <div class="swiper-container banner-wrap-zp">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="__PUBLIC__/images/home/banner01.png" />
+                    <img src="__PUBLIC__/images/home/banner01.jpg" />
                 </div>
                 <div class="swiper-slide">
-                    <img src="__PUBLIC__/images/home/banner02.png" />
+                    <img src="__PUBLIC__/images/home/banner02.jpg" />
                 </div>
                 <div class="swiper-slide">
-                    <img src="__PUBLIC__/images/home/banner03.png" />
+                    <img src="__PUBLIC__/images/home/banner03.jpg" />
                 </div>
             </div>
             <div class="swiper-pagination"></div>
